# cmake_build_ndk

./: .gitignore  README.md  build.cmd  build.py  build.sh
native_project/: CMakeLists.txt
native_project/src/: predictor.cc
